fix button  colour contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ header > a {
 }
 
 .nav-button {
-  background-color: #777;
+  background-color: #666;
   color: #eee;
   cursor: pointer;
 }
